# AyudaMe

./: .gitignore  manage.py  pyproject.toml
ayudame/: asgi.py  settings.py  urls.py  views.py  wsgi.py
client/: admin.py  forms.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_remove_client_name_client_user.py  0003_remove_client_date_remove_client_email.py
executor/: admin.py  models.py  urls.py  views.py
executor/migrations/: 0001_initial.py
offer/: admin.py  forms.py  models.py  urls.py  views.py
offer/migrations/: 0001_initial.py  0002_alter_offer_comment.py  0003_offer_status.py  0004_alter_offer_status.py
order/: forms.py  models.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_alter_order_executor.py  0002_order_status.py  0003_alter_order_executor.py  0003_alter_order_status.py
static/: styles.css
static/client/: index.css
static/executor/: index.css
static/order/: index.css  styles.css
templates/: base.html  main.html
templates/client/: detail.html  index.html
templates/django_registration/: registration_form.html
templates/executor/: detail.html  index.html
templates/offers/: create.html  index.html  order_list.html
templates/order/: create.html  delete.html  detail.html  index.html  offers_list.html  update.html  user_orders_list.html  userlist.html
templates/registration/: login.html
templates/test/: index.html
variables/: choices.py  mixins.py  validators.py
