[tool.poetry]
name = "ayudame"
version = "0.1.0"
description = ""
authors = ["hermxn <hermanhrynko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
django-stubs = "^4.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
